[package]
name = "git-commitizen"
version = "0.1.0-rc.1"
edition = "2021"
description = "A simple commitizen CLI tool in rust"
repository = "https://github.com/k3ii/git-cz"
license-file = "LICENSE"

[dependencies]
git2 = "0.19.0"
promkit = "0.4.5"

[dev-dependencies]
tempfile = "3.2"

[[bin]]
name = "git-cz"
path = "src/main.rs"


# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = true
